--- a/style.css
+++ b/style.css
@@ -33,6 +33,13 @@ td {
   font-size: 22px;
 }
 
+#restart {
+  position: absolute;
+  font-size: 22px;
+  left: 50px;
+  top: 50px;
+}
+
 #result {
   font-size: 50px;
 }
